# Mp3PlayFFmpegAndAudioTrack

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tlinux/mp3playffmpegandaudiotrack/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFMPEG.h  Mp3Decoder.cpp  Mp3Decoder.h  log.h  native-lib.cpp
app/src/main/cpp/ffmpeg/include/libavutil/: common.h
app/src/main/java/com/tlinux/mp3playffmpegandaudiotrack/: AudioInfo.java  MainActivity.java  Mp3Decoder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/tlinux/mp3playffmpegandaudiotrack/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
xxx/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
